[package]
name = "arb"
version = "0.1.0"
authors = ["Adrian Kumpf <adrian.kumpf@posteo.de>"]
edition = '2021'

[lib]
name = "arb"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { version = "0.36.1", features = ["nif_version_2_16"] }
arb = { git = "https://github.com/adriankumpf/abacom-relay-board", tag = 'v0.5.3' }
